force-app/main/default/objects/Account/fields/Amount_of_closed_won__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_closed_won__c</fullName>
    <label>Amount of closed won</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>