force-app/main/default/objects/Account/fields/Images__c.field-meta.xml
<CustomField>
    <fullName>Images__c</fullName>
    <formula>IF(  Open_opp__c &gt;0, IMAGE(&quot;/resource/1572541352000/Tick?&quot;, &quot;Green&quot;, 50, 50) , IMAGE(&quot;/resource/1572541380000/Cancel?&quot;, &quot;Red&quot;, 50, 50))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Images</label>
    <type>Text</type>
</CustomField>