force-app/main/default/objects/Account/fields/No_of_Closed_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>No_of_Closed_Opportunities__c</fullName>
    <label>No.of Closed Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>