force-app/main/default/objects/Account/fields/NumberofContact__c.field-meta.xml
<CustomField>
    <fullName>NumberofContact__c</fullName>
    <label>NumberofContact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>