force-app/main/default/objects/Account/validationRules/alidates_that_the_account_Billing_Countr.validationRule-meta.xml
<ValidationRule>
    <fullName>alidates_that_the_account_Billing_Countr</fullName>
    <active>false</active>
    <description>Validates that the account Billing Country is a valid ISO 3166 two-letter code.</description>
    <errorConditionFormula>OR(
LEN(BillingCountry) = 1,
NOT(
CONTAINS(
&quot;AF:AX:AL:DZ:AS:AD:AO:AI:AQ:AG:AR:AM:&quot; &amp;
&quot;AW:AU:AZ:BS:BH:BD:BB:BY:BE:BZ:BJ:BM:BT:BO:&quot; &amp;
&quot;BA:BW:BV:BR:IO:BN:BG:BF:BI:KH:CM:CA:CV:KY:&quot; &amp;
&quot;CF:TD:CL:CN:CX:CC:CO:KM:CG:CD:CK:CR:CI:HR:&quot; &amp;
&quot;CU:CY:CZ:DK:DJ:DM:DO:EC:EG:SV:GQ:ER:EE:ET:FK:&quot; &amp;
&quot;FO:FJ:FI:FR:GF:PF:TF:GA:GM:GE:DE:GH:GI:GR:GL:&quot; &amp;
&quot;GD:GP:GU:GT:GG:GN:GW:GY:HT:HM:VA:HN:HK:HU:&quot; &amp;
&quot;IS:IN:ID:IR:IQ:IE:IM:IL:IT:JM:JP:JE:JO:KZ:KE:KI:&quot; &amp;
&quot;KP:KR:KW:KG:LA:LV:LB:LS:LR:LY:LI:LT:LU:MO:MK:&quot; &amp;
&quot;MG:MW:MY:MV:ML:MT:MH:MQ:MR:MU:YT:MX:FM:MD:MC:&quot; &amp;
&quot;MC:MN:ME:MS:MA:MZ:MM:MA:NR:NP:NL:AN:NC:NZ:NI:&quot; &amp;
&quot;NE:NG:NU:NF:MP:NO:OM:PK:PW:PS:PA:PG:PY:PE:PH:&quot; &amp;
&quot;PN:PL:PT:PR:QA:RE:RO:RU:RW:SH:KN:LC:PM:VC:WS:&quot; &amp;
&quot;SM:ST:SA:SN:RS:SC:SL:SG:SK:SI:SB:SO:ZA:GS:ES:&quot; &amp;
&quot;LK:SD:SR:SJ:SZ:SE:CH:SY:TW:TJ:TZ:TH:TL:TG:TK:&quot; &amp;
&quot;TO:TT:TN:TR:TM:TC:TV:UG:UA:AE:GB:US:UM:UY:UZ:&quot; &amp;
&quot;VU:VE:VN:VG:VI:WF:EH:YE:ZM:ZW&quot;,
BillingCountry)))</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>A valid two-letter country code is required.</errorMessage>
</ValidationRule>