force-app/main/default/objects/Account/validationRules/must_be_org.validationRule-meta.xml
<ValidationRule>
    <fullName>must_be_org</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 RIGHT(Web_Site__c , 4) &lt;&gt; &quot;.COM&quot;,
 RIGHT(Web_Site__c , 4) &lt;&gt; &quot;.com&quot;,
RIGHT(Web_Site__c , 4) &lt;&gt; &quot;.ORG&quot;,
RIGHT(Web_Site__c , 4) &lt;&gt; &quot;.org&quot;,
RIGHT(Web_Site__c , 4) &lt;&gt; &quot;.NET&quot;,
RIGHT(Web_Site__c , 4) &lt;&gt; &quot;.net&quot;
)</errorConditionFormula>
    <errorDisplayField>Web_Site__c</errorDisplayField>
    <errorMessage>Web Site must have an extension of .com, .org, or .net.</errorMessage>
</ValidationRule>