force-app/main/default/objects/Account/validationRules/Validates_that_a_custom_date_field_con.validationRule-meta.xml
<ValidationRule>
    <fullName>Validates_that_a_custom_date_field_con</fullName>
    <active>false</active>
    <errorConditionFormula>YEAR( D_O_B__c ) &lt;&gt;  YEAR( TODAY() )</errorConditionFormula>
    <errorMessage>Date must be in the current year.</errorMessage>
</ValidationRule>