force-app/main/default/objects/Account/validationRules/Validates_that_the_Account_Number_is.validationRule-meta.xml
<ValidationRule>
    <fullName>Validates_that_the_Account_Number_is</fullName>
    <active>false</active>
    <description>Validates that the Account Number is numeric if not blank.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK( AccountNumber)) ,
 NOT(IsNumber( AccountNumber))

)</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Account Number is not numeric.</errorMessage>
</ValidationRule>